Import Adam's CSV files --- note one is missing from list of meter serial numbers 00980B76 and there's a 00980B13 60 k.csv I have to figure out Data in Mysql DB  --- TODO adjust logic to get new data

--- a/LOR-EOR/Generator EOR and LOR Data Preparations.ipynb
+++ b/LOR-EOR/Generator EOR and LOR Data Preparations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "d469f2da",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,9 @@
     "\n",
     "# Create connection string to SQL DB with meter readings\n",
     "\n",
-    "ENGINE = create_engine('postgresql://postgres:4raxeGo5xgB$@localhost:5432/eyedro_meters')\n",
+    "#######ENGINE = create_engine('postgresql://postgres:4raxeGo5xgB$@localhost:5432/eyedro_meters')\n",
+    "ENGINE = create_engine('mysql://lor__eor:lor__eor@db4free.net/eyedro_meters') # connect to server\n",
+    "\n",
     "print('SQL Connection String Created')\n",
     "\n",
     "# Set power factor and load assumptions\n",
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "7d3c339a",
    "metadata": {},
    "outputs": [
@@ -70,28 +72,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00980845 | 0:00:02.541002 elapsed | success\n",
-      "00980E1F | 0:00:00.104355 elapsed | success\n",
-      "00980DCD | 0:00:00.114887 elapsed | success\n",
-      "00980E2A | 0:00:00.084970 elapsed | success\n",
-      "00980E29 | 0:00:00.083954 elapsed | success\n",
-      "00980B76 | 0:00:00.134370 elapsed | failure | error: can't multiply sequence by non-int of type 'float'\n",
-      "00980B1E | 0:00:00.555114 elapsed | success\n",
-      "00980B1C | 0:00:01.133349 elapsed | success\n",
-      "00980B13 | 0:00:01.125420 elapsed | success\n"
+      "XXXXXXXXX ['00980845', '00980E1F', '00980DCD', '00980E2A', '00980E29', '00980B76', '00980B1E', '00980B1C', '00980B13']\n",
+      "df_meter_readings 00980845\n",
+      "df_meter_readings 00980E1F\n",
+      "df_meter_readings 00980DCD\n",
+      "df_meter_readings 00980E2A\n",
+      "00980E29 | 0:00:00.578684 elapsed | failure | error: (MySQLdb.ProgrammingError) (1146, \"Table 'eyedro_meters.00980E29' doesn't exist\")\n",
+      "[SQL: select * from `00980E29`]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "00980B76 | 0:00:00.638723 elapsed | failure | error: (MySQLdb.ProgrammingError) (1146, \"Table 'eyedro_meters.00980B76' doesn't exist\")\n",
+      "[SQL: select * from `00980B76`]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
+      "df_meter_readings 00980B1E\n",
+      "df_meter_readings 00980B1C\n",
+      "df_meter_readings 00980B13\n"
      ]
     }
    ],
    "source": [
     "meter_serials = df_gen_info['DeviceSerial_NoDash'].to_list()\n",
-    "\n",
+    "print('XXXXXXXXX',meter_serials)\n",
     "for serial in meter_serials:\n",
     "    \n",
     "    rt_st = dt.now()\n",
     "    \n",
     "    try:\n",
     "        # Call PG database to pull in meter readings for a sample meter\n",
-    "        df_meter_readings = pd.read_sql_query(f'select * from \"{serial}\"',con=ENGINE)\n",
+    "        df_meter_readings = pd.read_sql_query(f'select * from `{serial}`',con=ENGINE)\n",
+    "        print(\"df_meter_readings\",serial)\n",
+    "        continue\n",
     "\n",
     "        # Create a new \"kWH\" column by dividing \"Wh\" by 1000\n",
     "        df_meter_readings.insert(df_meter_readings.columns.get_loc(\"Wh\") + 1, \"kWH\", df_meter_readings['Wh'] / 1000)\n",
@@ -160,349 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0fa17aad",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>DeviceSerial</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Wh</th>\n",
-       "      <th>kWH</th>\n",
-       "      <th>KW</th>\n",
-       "      <th>gmt_timestamp</th>\n",
-       "      <th>month</th>\n",
-       "      <th>week</th>\n",
-       "      <th>day_of_month</th>\n",
-       "      <th>day_of_week</th>\n",
-       "      <th>time</th>\n",
-       "      <th>timeslot_mean</th>\n",
-       "      <th>timeslot_median</th>\n",
-       "      <th>Wh_Outlier</th>\n",
-       "      <th>KVA Rating</th>\n",
-       "      <th>EOR</th>\n",
-       "      <th>LOR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1671426000</td>\n",
-       "      <td>7564</td>\n",
-       "      <td>7.564</td>\n",
-       "      <td>30.256</td>\n",
-       "      <td>2022-12-19T05:00:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>monday</td>\n",
-       "      <td>05:00</td>\n",
-       "      <td>2202.265306</td>\n",
-       "      <td>2270.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0.189847</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1671426900</td>\n",
-       "      <td>8179</td>\n",
-       "      <td>8.179</td>\n",
-       "      <td>32.716</td>\n",
-       "      <td>2022-12-19T05:15:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>monday</td>\n",
-       "      <td>05:15</td>\n",
-       "      <td>1665.960000</td>\n",
-       "      <td>82.5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0.100379</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1671427800</td>\n",
-       "      <td>2140</td>\n",
-       "      <td>2.140</td>\n",
-       "      <td>8.560</td>\n",
-       "      <td>2022-12-19T05:30:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>monday</td>\n",
-       "      <td>05:30</td>\n",
-       "      <td>1386.826923</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>60</td>\n",
-       "      <td>3.205607</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1671428700</td>\n",
-       "      <td>76</td>\n",
-       "      <td>0.076</td>\n",
-       "      <td>0.304</td>\n",
-       "      <td>2022-12-19T05:45:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>monday</td>\n",
-       "      <td>05:45</td>\n",
-       "      <td>1254.961538</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>60</td>\n",
-       "      <td>117.421053</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1671429600</td>\n",
-       "      <td>72</td>\n",
-       "      <td>0.072</td>\n",
-       "      <td>0.288</td>\n",
-       "      <td>2022-12-19T06:00:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>monday</td>\n",
-       "      <td>06:00</td>\n",
-       "      <td>1159.846154</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>60</td>\n",
-       "      <td>124.000000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33631</th>\n",
-       "      <td>35073</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1702991700</td>\n",
-       "      <td>80</td>\n",
-       "      <td>0.080</td>\n",
-       "      <td>0.320</td>\n",
-       "      <td>2023-12-19T12:15:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>tuesday</td>\n",
-       "      <td>12:15</td>\n",
-       "      <td>846.960784</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>60</td>\n",
-       "      <td>111.500000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33632</th>\n",
-       "      <td>35074</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1702992600</td>\n",
-       "      <td>82</td>\n",
-       "      <td>0.082</td>\n",
-       "      <td>0.328</td>\n",
-       "      <td>2023-12-19T12:30:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>tuesday</td>\n",
-       "      <td>12:30</td>\n",
-       "      <td>952.431373</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>60</td>\n",
-       "      <td>108.756098</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33633</th>\n",
-       "      <td>35075</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1702993500</td>\n",
-       "      <td>81</td>\n",
-       "      <td>0.081</td>\n",
-       "      <td>0.324</td>\n",
-       "      <td>2023-12-19T12:45:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>tuesday</td>\n",
-       "      <td>12:45</td>\n",
-       "      <td>888.254902</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>60</td>\n",
-       "      <td>110.111111</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33634</th>\n",
-       "      <td>35076</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1702994400</td>\n",
-       "      <td>76</td>\n",
-       "      <td>0.076</td>\n",
-       "      <td>0.304</td>\n",
-       "      <td>2023-12-19T13:00:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>tuesday</td>\n",
-       "      <td>13:00</td>\n",
-       "      <td>933.529412</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>60</td>\n",
-       "      <td>117.421053</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33635</th>\n",
-       "      <td>35077</td>\n",
-       "      <td>00980B13</td>\n",
-       "      <td>1702995300</td>\n",
-       "      <td>75</td>\n",
-       "      <td>0.075</td>\n",
-       "      <td>0.300</td>\n",
-       "      <td>2023-12-19T13:15:00+00:00</td>\n",
-       "      <td>12</td>\n",
-       "      <td>51</td>\n",
-       "      <td>19</td>\n",
-       "      <td>tuesday</td>\n",
-       "      <td>13:15</td>\n",
-       "      <td>957.509804</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>60</td>\n",
-       "      <td>119.000000</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>33636 rows × 18 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       index DeviceSerial   Timestamp    Wh    kWH      KW  \\\n",
-       "0          0     00980B13  1671426000  7564  7.564  30.256   \n",
-       "1          1     00980B13  1671426900  8179  8.179  32.716   \n",
-       "2          2     00980B13  1671427800  2140  2.140   8.560   \n",
-       "3          3     00980B13  1671428700    76  0.076   0.304   \n",
-       "4          4     00980B13  1671429600    72  0.072   0.288   \n",
-       "...      ...          ...         ...   ...    ...     ...   \n",
-       "33631  35073     00980B13  1702991700    80  0.080   0.320   \n",
-       "33632  35074     00980B13  1702992600    82  0.082   0.328   \n",
-       "33633  35075     00980B13  1702993500    81  0.081   0.324   \n",
-       "33634  35076     00980B13  1702994400    76  0.076   0.304   \n",
-       "33635  35077     00980B13  1702995300    75  0.075   0.300   \n",
-       "\n",
-       "                   gmt_timestamp  month  week  day_of_month day_of_week  \\\n",
-       "0      2022-12-19T05:00:00+00:00     12    51            19      monday   \n",
-       "1      2022-12-19T05:15:00+00:00     12    51            19      monday   \n",
-       "2      2022-12-19T05:30:00+00:00     12    51            19      monday   \n",
-       "3      2022-12-19T05:45:00+00:00     12    51            19      monday   \n",
-       "4      2022-12-19T06:00:00+00:00     12    51            19      monday   \n",
-       "...                          ...    ...   ...           ...         ...   \n",
-       "33631  2023-12-19T12:15:00+00:00     12    51            19     tuesday   \n",
-       "33632  2023-12-19T12:30:00+00:00     12    51            19     tuesday   \n",
-       "33633  2023-12-19T12:45:00+00:00     12    51            19     tuesday   \n",
-       "33634  2023-12-19T13:00:00+00:00     12    51            19     tuesday   \n",
-       "33635  2023-12-19T13:15:00+00:00     12    51            19     tuesday   \n",
-       "\n",
-       "        time  timeslot_mean  timeslot_median  Wh_Outlier KVA Rating  \\\n",
-       "0      05:00    2202.265306           2270.0        True         60   \n",
-       "1      05:15    1665.960000             82.5        True         60   \n",
-       "2      05:30    1386.826923             83.0       False         60   \n",
-       "3      05:45    1254.961538             81.0       False         60   \n",
-       "4      06:00    1159.846154             81.0       False         60   \n",
-       "...      ...            ...              ...         ...        ...   \n",
-       "33631  12:15     846.960784             80.0       False         60   \n",
-       "33632  12:30     952.431373             81.0       False         60   \n",
-       "33633  12:45     888.254902             81.0       False         60   \n",
-       "33634  13:00     933.529412             82.0       False         60   \n",
-       "33635  13:15     957.509804             81.0       False         60   \n",
-       "\n",
-       "              EOR   LOR  \n",
-       "0        0.189847  None  \n",
-       "1        0.100379  None  \n",
-       "2        3.205607  None  \n",
-       "3      117.421053  None  \n",
-       "4      124.000000  None  \n",
-       "...           ...   ...  \n",
-       "33631  111.500000  None  \n",
-       "33632  108.756098  None  \n",
-       "33633  110.111111  None  \n",
-       "33634  117.421053  None  \n",
-       "33635  119.000000  None  \n",
-       "\n",
-       "[33636 rows x 18 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_meter_readings"
    ]
@@ -524,22 +194,22 @@
     "\n",
     "# Ignore/skip 0's and outliers and see what resulting dataset looks like for each meter; if needed, try plugging\n",
     "\n",
-    "0 - 11:00 \n",
-    "0 - 11:15\n",
-    "0 - 11:30\n",
-    "0 - 11:45\n",
+    "# 0 - 11:00 \n",
+    "# 0 - 11:15\n",
+    "# 0 - 11:30\n",
+    "# 0 - 11:45\n",
     "    \n",
     "\n",
-    "- if we have only one reading within an hour, we also mark to be ignored\n",
-    "- only consider hourly total in cases where we have at least 2 readings within that hour\n",
-    "--> keep track of % missing/outlier values\n",
-    "--> Display as total \n",
+    "# - if we have only one reading within an hour, we also mark to be ignored\n",
+    "# - only consider hourly total in cases where we have at least 2 readings within that hour\n",
+    "# --> keep track of % missing/outlier values\n",
+    "# --> Display as total \n",
     "\n",
     "    \n",
-    "5 - 12:00\n",
-    "95 - outlier 6 - 12:15\n",
-    "7 - 12:30\n",
-    "0 - zero 6 - 12:45"
+    "# 5 - 12:00\n",
+    "# 95 - outlier 6 - 12:15\n",
+    "# 7 - 12:30\n",
+    "# 0 - zero 6 - 12:45"
    ]
   }
  ],
@@ -559,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
