Use lor-eor.py to update Mysql table for a particular generator where the EOR is null Update generator_info.xlsx for Herat  GB 980845

--- a/LOR-EOR/Generator EOR and LOR Data Preparations.ipynb
+++ b/LOR-EOR/Generator EOR and LOR Data Preparations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "d469f2da",
    "metadata": {},
    "outputs": [
@@ -64,35 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "7d3c339a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XXXXXXXXX ['00980845', '00980E1F', '00980DCD', '00980E2A', '00980E29', '00980B76', '00980B1E', '00980B1C', '00980B13']\n",
-      "df_meter_readings 00980845\n",
-      "df_meter_readings 00980E1F\n",
-      "df_meter_readings 00980DCD\n",
-      "df_meter_readings 00980E2A\n",
-      "00980E29 | 0:00:00.578684 elapsed | failure | error: (MySQLdb.ProgrammingError) (1146, \"Table 'eyedro_meters.00980E29' doesn't exist\")\n",
-      "[SQL: select * from `00980E29`]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
-      "00980B76 | 0:00:00.638723 elapsed | failure | error: (MySQLdb.ProgrammingError) (1146, \"Table 'eyedro_meters.00980B76' doesn't exist\")\n",
-      "[SQL: select * from `00980B76`]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/f405)\n",
-      "df_meter_readings 00980B1E\n",
-      "df_meter_readings 00980B1C\n",
-      "df_meter_readings 00980B13\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meter_serials = df_gen_info['DeviceSerial_NoDash'].to_list()\n",
     "print('XXXXXXXXX',meter_serials)\n",
-    "for serial in meter_serials:\n",
+    "for serial in    ['00980845']: ###smh meter_serials:\n",
     "    \n",
     "    rt_st = dt.now()\n",
     "    \n",
