ADAM_GB add config.ini for secure creds. Update GB data up to today. Fix bugs in parsing epochs to datetime.

--- a/ADAM_NOTEBOOKS/02 Meter Readings/Master Meter Update - Existing Meters copy.ipynb
+++ b/ADAM_NOTEBOOKS/02 Meter Readings/Master Meter Update - Existing Meters copy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "7ca338f2",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
       "Starting and ending indices set, processing meters 0 to 99\n",
       "SQL Connection String Created\n",
       "EyeDro Endpoint and Key Set\n",
-      "List of existing meter serials in SQL database gathered\n",
+      "List of existing meter serials in SQL database gathered 566\n",
       "function created: eyedro_getdata\n",
       "function created: parse_timestamp\n",
       "function created: fill_missing_timestamps\n",
@@ -40,6 +40,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import json as js\n",
     "import requests\n",
     "from sqlalchemy import create_engine\n",
@@ -52,7 +53,7 @@
     "E_IDX = 100\n",
     "print(f'Starting and ending indices set, processing meters {S_IDX} to {E_IDX -1}')\n",
     "\n",
-    "ENGINE = create_engine('postgresql://postgres:4raxeGo5xgB$@localhost:5432/eyedro_meters')\n",
+    "ENGINE = 'postgresql://avnadmin:AVNS_zSrniBsHGVQSqhqunlJ@pg-unhcr-unhcr-007.a.aivencloud.com:15602/defaultdb' ####smh create_engine('postgresql://postgres:4raxeGo5xgB$@localhost:5432/eyedro_meters')\n",
     "print('SQL Connection String Created')\n",
     "\n",
     "API_BASE_URL = \"https://api.eyedro.com/customcmd\"\n",
@@ -74,14 +75,23 @@
     "and \"table_type\" = 'BASE TABLE'\n",
     ";\n",
     "'''\n",
-    "\n",
-    "L_SQL_SERIALS = pd.read_sql_query(\"select * from vw_table_list;\",con=ENGINE).serial_num.to_list()\n",
-    "print('List of existing meter serials in SQL database gathered')\n",
+    "#smh\n",
+    "#L_SQL_SERIALS = pd.read_sql_query(\"select * from vw_table_list;\",con=ENGINE).serial_num.to_list()\n",
+    "try:\n",
+    "    L_SQL_SERIALS = set(pd.read_sql_query(f\"SELECT table_name FROM gb_2024.vw_table_list;\",con=ENGINE).table_name.values)\n",
+    "except Exception as e:\n",
+    "    print('EEEEEEEEEEEEEE',e)\n",
+    "    pass\n",
+    "print('List of existing meter serials in SQL database gathered', len(L_SQL_SERIALS))\n",
     "\n",
     "# Define functions for various operations in the script\n",
     "\n",
+    "# Function to convert Timestamp to epoch time\n",
+    "# def pd_timestamp_to_epoch(timestamp):\n",
+    "#     return timestamp.timestamp()\n",
+    "\n",
     "def eyedro_getdata(serial, timestamp):\n",
-    "    \n",
+    "\n",
     "    '''\n",
     "    This function takes as its input a meter serial number and an epoch timestamp and calls the GetData API to \n",
     "    retrieve the prior day's readings (96 steps at 15-minute intervals). It returns the response as JSON text\n",
@@ -130,12 +140,13 @@
     "    # Convert the \"Timestamp\" column to a datetime object\n",
     "    df['Timestamp'] = pd.to_datetime(df['Timestamp'], unit='s')\n",
     "\n",
+    "\n",
     "    # Find the minimum and maximum timestamps in the dataframe\n",
     "    min_timestamp = df['Timestamp'].min()\n",
     "    max_timestamp = df['Timestamp'].max()\n",
     "\n",
     "    # Generate a list of expected timestamps at 15-minute intervals\n",
-    "    expected_timestamps = pd.date_range(start=min_timestamp, end=max_timestamp, freq='15T')\n",
+    "    expected_timestamps = pd.date_range(start=min_timestamp, end=max_timestamp, freq='15min')\n",
     "\n",
     "    # Identify missing timestamps\n",
     "    missing_timestamps = expected_timestamps[~expected_timestamps.isin(df['Timestamp'])]\n",
@@ -154,7 +165,10 @@
     "    df.sort_values(by='Timestamp', inplace=True)\n",
     "    \n",
     "    # Convert the timestamp back to epoch format\n",
-    "    df['Timestamp'] = df['Timestamp'].astype(int) // 10**9\n",
+    "    #smh df['Timestamp'] = df['Timestamp'].astype('Int64') // 10**9\n",
+    "    df['Timestamp'] = df['Timestamp'].astype(np.int64) // 10**9\n",
+    "    #df['Timestamp'] = df['Timestamp'].apply(lambda x: int(x.timestamp())) ######.apply(pd_timestamp_to_epoch).astype('int32')\n",
+    "    \n",
     "\n",
     "    return df\n",
     "\n",
@@ -191,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f1a9a6e4",
    "metadata": {},
    "outputs": [
@@ -199,18 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00980A39 | 0:00:57.923228 elapsed | success | Rows Loaded: 109486\n",
-      "00980929 | 0:00:56.624698 elapsed | success | Rows Loaded: 109486\n",
-      "00980B60 | 0:00:53.023192 elapsed | success | Rows Loaded: 109486\n",
-      "0098088D | 0:00:54.306010 elapsed | success | Rows Loaded: 109486\n",
-      "00980741 | 0:00:56.869600 elapsed | success | Rows Loaded: 109486\n",
-      "00980984 | 0:00:58.539129 elapsed | success | Rows Loaded: 109486\n",
-      "00980A53 | 0:00:55.579695 elapsed | success | Rows Loaded: 109469\n",
-      "00980A72 | 0:00:54.562749 elapsed | success | Rows Loaded: 109486\n",
-      "009809E9 | 0:00:52.920090 elapsed | success | Rows Loaded: 109487\n",
-      "00980B36 | 0:00:53.160234 elapsed | success | Rows Loaded: 109487\n",
-      "009808DC | 0:00:51.191176 elapsed | success | Rows Loaded: 109487\n",
-      "00980844 | 0:00:55.211472 elapsed | success | Rows Loaded: 109487\n"
+      "009004E2 | 0:00:14.911260 elapsed | success | Rows Loaded: 10461  461\n"
      ]
     }
    ],
@@ -218,11 +221,14 @@
     "#for serial in L_SQL_SERIALS[S_IDX:E_IDX]:\n",
     "for serial in L_SQL_SERIALS:\n",
     "    \n",
+    "    if serial != '009004E2':\n",
+    "        continue\n",
     "    rt_st = dt.now()\n",
     "    \n",
     "    try:\n",
-    "        # Load the data from the existing table\n",
-    "        df_temp = pd.read_sql_query(f'select * from \"{serial}\"',con=ENGINE)\n",
+    "        # Load the data from the existing table #smh \n",
+    "        df_temp = pd.read_sql_query(f'select * from gb_2024.\"{serial}\"',con=ENGINE)\n",
+    "        #smh pd.read_sql_query(f'select * from \"{serial}\"',con=ENGINE)\n",
     "\n",
     "        # Trim off columns in preparation to append new data\n",
     "        cols_to_keep = ['DeviceSerial','Timestamp','Wh']\n",
@@ -239,9 +245,17 @@
     "        current_date = dt.utcfromtimestamp(max_timestamp).date()\n",
     "        midnight = dt(current_date.year, current_date.month, current_date.day, 0, 0, 0, tzinfo=timezone.utc)\n",
     "\n",
-    "        while midnight.timestamp() <= current_timestamp:\n",
-    "            midnight_timestamps.append(int(midnight.timestamp()))\n",
-    "            midnight += timedelta(days=1)\n",
+    "        ts = max_timestamp\n",
+    "        midnight_timestamps.append(ts)\n",
+    "        ts = midnight.timestamp()\n",
+    "        ts += 24 * 60 * 60\n",
+    "        while ts <= current_timestamp:\n",
+    "            midnight_timestamps.append(int(ts))\n",
+    "            ts += 24 * 60 * 60\n",
+    "            \n",
+    "        # while midnight.timestamp() <= current_timestamp:\n",
+    "        #     midnight_timestamps.append(int(midnight.timestamp()))\n",
+    "        #     midnight += timedelta(days=1)\n",
     "\n",
     "        # Create list to hold responses to the API calls, storing each response as an element in a list\n",
     "        li_responses = []\n",
@@ -296,15 +310,22 @@
     "        # Re-sort the dataframe by timestamp\n",
     "        df_updated = df_updated.sort_values(by=['Timestamp'], ascending=True)\n",
     "\n",
+    "        # Parse date and time info out of the timestamps\n",
+    "        #parsed_timestamps = df_updated['Timestamp'].apply(parse_timestamp)\n",
+    "\n",
+    "        #df_updated = df_updated[['DeviceSerial','Timestamp','Wh']]\n",
+    "        # Add the parsed data back into the DataFrame\n",
+    "        #df_updated = df_updated.join(pd.json_normalize(parsed_timestamps))\n",
+    "        \n",
     "        # Impute means and medians and create imputed value columns for later use\n",
     "        df_updated = impute_and_summarize(df_updated)\n",
     "\n",
     "        # Load resulting update to SQL\n",
-    "        df_updated.to_sql(f\"{serial}\", ENGINE, if_exists='replace')\n",
+    "        res = df_updated.to_sql(f\"{serial}\", ENGINE, schema='gb_2024',if_exists='replace')\n",
     "        \n",
     "        # Print status message\n",
     "        rt_et = dt.now()\n",
-    "        print(f\"{serial} | {rt_et-rt_st} elapsed | success | Rows Loaded: {len(df_updated)}\")\n",
+    "        print(f\"{serial} | {rt_et-rt_st} elapsed | success | Rows Loaded: {len(df_updated)}  {res}\")\n",
     "    \n",
     "    except Exception as e:\n",
     "        rt_et = dt.now()\n",
@@ -339,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
