Nothing much here, just testing

--- a/kobo_gen_survey/Load Survey Data to Postgres for Crosscheck.ipynb
+++ b/kobo_gen_survey/Load Survey Data to Postgres for Crosscheck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "bc43d195",
    "metadata": {},
    "outputs": [
@@ -13,16 +13,6 @@
       "libraries imported\n",
       "postgres connection string created\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "469"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -42,14 +32,14 @@
     "\n",
     "### Create DB Connection String Engine to Load to Postgres Tables\n",
     "######engine = create_engine('postgresql://postgres:2283@localhost:5432/postgres')\n",
-    "engine = create_engine(config['Section DB']['create_engine'])   ####'postgresql://postgres:postgres@localhost:5432/kobo')\n",
+    "engine = create_engine(config['KOBO']['create_engine'])   ####'postgresql://postgres:postgres@localhost:5432/kobo')\n",
     "\n",
     "###con = psycopg2.connect(database=\"kobo\", user=\"postgres\", password=\"postgres\", host=\"localhost\", port=\"5432\")\n",
     "print('postgres connection string created')\n",
     "\n",
-    "source_file = 'D:\\\\OneDrive - UNHCR\\\\Green Data Team\\\\09 Generators\\\\04 Generator Data Update Survey\\\\UNHCR_Generator_-_CloudERP_Update_Survey_-_all_versions_-_EnglishEN_-_2024-02-13-10-26-54.xlsx'\n",
+    "source_file = config['KOBO']['SOURCE_FILE']\n",
     "\n",
-    "df = pd.read_excel(source_file, sheet_name = 'gen_info_survey')\n",
+    "df = pd.read_excel(source_file, sheet_name = config['KOBO']['SHEET_NAME'])\n",
     "\n",
     "column_mapping = {'Generator Asset Number (CloudERP):' : 'asset_id',\n",
     "                    'Please take a photo of the generator nameplate' : 'nameplate_photo', \n",
@@ -73,7 +63,7 @@
     "df['asset_id_num'] = df['asset_id_num'].astype(float).astype(pd.Int64Dtype(), errors='ignore')\n",
     "df['dupe_asset_id'] = df.duplicated('asset_id_num')\n",
     "\n",
-    "df.to_sql(config['Section DB']['table_name'], engine, if_exists='replace')\n"
+    "df.to_sql(config['KOBO']['TABLE_NAME'], engine, if_exists='replace')\n"
    ]
   },
   {
