--- a/ADAM_NOTEBOOKS/02 Meter Readings/Master Meter Update - Existing Meters copy.ipynb
+++ b/ADAM_NOTEBOOKS/02 Meter Readings/Master Meter Update - Existing Meters copy.ipynb
@@ -18,10 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "7ca338f2",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_23004\\2875485900.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -30,7 +44,7 @@
       "Starting and ending indices set, processing meters 0 to 99\n",
       "SQL Connection String Created\n",
       "EyeDro Endpoint and Key Set\n",
-      "List of existing meter serials in SQL database gathered 566\n",
+      "List of existing meter serials in SQL database gathered 568\n",
       "function created: eyedro_getdata\n",
       "function created: parse_timestamp\n",
       "function created: fill_missing_timestamps\n",
@@ -360,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
