Update readme WIP --- for all python code projects

--- a/kobo_gen_survey/Load Survey Data to Postgres for Crosscheck.ipynb
+++ b/kobo_gen_survey/Load Survey Data to Postgres for Crosscheck.ipynb
@@ -16,6 +16,9 @@
     }
    ],
    "source": [
+    "\"\"\"Run this code to create the \"gen_survey_results\" (config['KOBO']['TABLE_NAME']) DB table\n",
+    "   Note it will replace the table if it exists\n",
+    "\"\"\"\n",
     "import configparser\n",
     "import warnings \n",
     "warnings.filterwarnings('ignore')\n",
@@ -82,6 +85,8 @@
     }
    ],
    "source": [
+    "\"\"\"Test code not used\n",
+    "\"\"\"\n",
     "import psycopg2\n",
     "import openpyxl\n",
     "\n",
@@ -108,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "7149a32b",
    "metadata": {},
    "outputs": [
@@ -116,16 +121,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Section DB', 'Section NEXT']\n",
-      "XXXXXXX Section DB\n",
-      "XXXXXXX Section NEXT\n",
+      "['KOBO', 'GB_2024', 'GB_2023', 'GB_API_V1', 'PROTON']\n",
+      "XXXXXXX KOBO\n",
+      "XXXXXXX GB_2024\n",
+      "XXXXXXX GB_2023\n",
+      "XXXXXXX GB_API_V1\n",
+      "XXXXXXX PROTON\n",
       "postgresql://postgres:postgres@localhost:5432/kobo\n",
-      "gen_survey_results\n"
+      "D:\\\\OneDrive - UNHCR\\\\Green Data Team\\\\09 Generators\\\\04 Generator Data Update Survey\\\\UNHCR_Generator_-_CloudERP_Update_Survey_-_all_versions_-_EnglishEN_-_2024-02-13-10-26-54.xlsx\n"
      ]
     }
    ],
    "source": [
-    "\t\n",
+    "\"\"\"Test code config parser\n",
+    "\"\"\"\n",
     "import configparser\n",
     " \n",
     " \n",
@@ -137,7 +146,7 @@
     "\n",
     "\n",
     "config = configparser.ConfigParser()\n",
-    "config.read('config.ini')\n",
+    "config.read('../config.ini')\n",
     "\n",
     " \n",
     " \n",
@@ -147,8 +156,8 @@
     "for c in config.sections():\n",
     "   print('XXXXXXX',c)\n",
     "  \n",
-    "print(config['Section DB']['create_engine']) # ['create_engine', 'table_name'])\n",
-    "print(config['Section DB']['table_name']) # ['create_engine', 'table_name'])\n"
+    "print(config['KOBO']['create_engine'])\n",
+    "print(config['KOBO']['SOURCE_FILE'])\n"
    ]
   }
  ],
@@ -168,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
